# selecta

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  Selecta.bat  pyproject.toml  setup.sh
scripts/: demo.tape  demo_library.py  energy_eval.py  make_screens.py
selecta/: __init__.py  analysis.py  app.py  cli.py  config.py  library.py  map.py  similarity.py
tests/: conftest.py  test_analysis.py  test_app.py  test_library.py  test_map.py  test_similarity.py
